tests/cases/control-flow/errors/labeled-block-break-type.ari
fn main() -> i64 {
  let value = done: {
    break done false;
    1
  };
  return value;
}
